config/nginx/nginx-ingressroute.yaml
apiVersion: traefik.io/v1alpha1 # Or traefik.io/v1alpha1 depending on Traefik version
kind: IngressRoute
metadata:
  name: nginx-test-ingressroute
  namespace: nginx-test
spec:
  entryPoints:
    - websecure # Your HTTPS entrypoint defined in Traefik's config (usually port 443)
  routes:
  - match: Host(`nginx-test.everythingascode.dev`) # !!! REPLACE with your desired subdomain !!!
    kind: Rule
    services:
    - name: nginx-test-service # Name of the Service created in Step 2
      port: 80                 # Port defined in the Service
  tls:
    secretName: nginx-test-tls # !!! MUST match secretName in the Certificate resource !!!
    domains:
      - main: nginx-test.everythingascode.dev
